fix: contents panel not scrollable on mobile
Issue: alex4401/wiki_stuff#21

--- a/modules/core/css/components/Legend.less
+++ b/modules/core/css/components/Legend.less
@@ -50,6 +50,8 @@
         min-height: 0;
 
         > .oo-ui-menuLayout {
+            height: 56vh;
+
             > .oo-ui-menuLayout-content {
                 flex-grow: 1;
                 padding: 8px;
